--- a/src/main/resources/templates/FunWithFlagsWebSocket/gameover.html
+++ b/src/main/resources/templates/FunWithFlagsWebSocket/gameover.html
@@ -1,11 +1,12 @@
-<div id="turn" class="col-6 offset-3">
-        
-    <h1 class="display-1">Game Over!</h1>
-    <p>No more turns left!</p>
-    <h3>Final Standing</h3>
-    <ol class="list-group">
-        {#for score in game.scores}
-        <li class="list-group-item d-flex justify-content-between"><span class="display-{score_count}">{score_count} {score.player.name}</span><span>{score.score}</span></li>
-        {/for}
-    </ol>
+<div id="game" class="row" hx-ext="ws" ws-connect="/game/{receiver.name}" hx-swap-oob="innerHTML">
+    <div class="col-12 col-md-8 offset-md-2">
+        <h1 class="display-1">Game Over!</h1>
+       <ol class="list-group mb-3">
+            {#for score in game.scores}
+            <li class="list-group-item d-flex justify-content-between"><span class="display-{score_count}">{score_count}
+                    {score.player.name}</span><span class="display-{score_count}">{score.score}</span></li>
+            {/for}
+        </ol>
+        <a class="btn btn-primary btn-lg w-100 mb-3" href="/">Play again</a>
+    </div>
 </div>
