--- a/src/main/resources/templates/IndexResource/index.html
+++ b/src/main/resources/templates/IndexResource/index.html
@@ -12,64 +12,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
+    <script src="https://unpkg.com/htmx.org/dist/ext/class-tools.js"></script>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="px-4 py-3 my-3 text-center">
-            <div class="row row-cols-12">
-                <div class="col">
-                    <div class="card">
-                        <div class="card-image">
-                            <img class="flag-img" src="/flags/4x3/aw.svg" alt="Guess the country of this flag">
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <div class="card-image">
-                            <img class="flag-img" src="/flags/4x3/az.svg" alt="Guess the country of this flag">
-                        </div>
-                    </div>    
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <div class="card-image">
-                            <img class="flag-img" src="/flags/4x3/gr.svg" alt="Guess the country of this flag">
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <div class="card-image">
-                            <img class="flag-img" src="/flags/4x3/al.svg" alt="Guess the country of this flag">
-                        </div>
-                    </div>    
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <div class="card-image">
-                            <img class="flag-img" src="/flags/4x3/sx.svg" alt="Guess the country of this flag">
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <div class="card-image">
-                            <img class="flag-img" src="/flags/4x3/vu.svg" alt="Guess the country of this flag">
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <h1 class="display-3 fw-bold text-body-emphasis">Fun with Flags!</h1>
-            <p class="lead">
-                Can you guess the country of the flag? Play against {nrOfPlayersPerGame} others to see if you can beat them!
-            </p>
-            <div class="text-sm">Number of active games: <span id="nr_of_games">{nrOfGames}</span></div>
+            <h1 class="display-3 fw-bold text-body-emphasis"><span class="text-danger">Fun</span> with Flags!</h1>
         </div>
-        <div id="join" class="row">
-            <div class="col">&nbsp;</div>
-            <div id="game" class="col-4 text-center">
+        <div id="game" class="row">
+            <div class="col-md-8 offset-md-2 col-12 text-center">
                 <form hx-post="/join" hx-target="#game" hx-swap="outerHTML">
                     <div class="input-group mb-3">
                         <input name="playername" type="text" class="form-control" placeholder="Enter player name" autofocus
@@ -78,9 +30,6 @@
                     </div>
                 </form>
             </div>
-            <div class="col">&nbsp;</div>
-        </div>
-        <div id="game" style="display:none">
         </div>
     </div>
     <script id="script">
