--- a/src/main/resources/templates/IndexResource/joined.html
+++ b/src/main/resources/templates/IndexResource/joined.html
@@ -1,5 +1,5 @@
-<div id="game" hx-ws="connect:/game/{playername}" class="row">
-    <div class="col-6 offset-3">
+<div id="game"  hx-ext="ws" ws-connect="/game/{playername}" class="row">
+    <div class="col-12 text-center">
         <h3>Joining lobby...</h3>
         <ul class="list-group" id="lobby-list">
         </ul>
