--- a/src/main/resources/templates/FunWithFlagsWebSocket/game.html
+++ b/src/main/resources/templates/FunWithFlagsWebSocket/game.html
@@ -9,15 +9,21 @@
         </div>
         <section id="guess">
             <form hx-post="/guess/{receiver.name}/{game.turnNumber}" hx-indicator=".htmx-indicator">
+                <script>
+                    function checkUserKeydown(event) {
+                        return event instanceof KeyboardEvent
+                    }
+                </script>
                 <div class="input-group mt-3">
-                    <input class="form-control" type="search" id="search" name="search" placeholder="Enter the country name" hx-trigger="keyup changed delay:500ms, search" hx-post="/country/search" hx-target="#banana" hx-indicator=".htmx-indicator" hx-swap="outerHTML">
+                    <input class="form-control" type="text" id="search" name="search" autofocus list="countries" placeholder="Enter the country name" 
+                        hx-trigger="keyup[checkUserKeydown.call(this, event)] changed delay:50ms" 
+                        hx-post="/country/search" 
+                        hx-target="#countries" 
+                        hx-swap="outerHTML">
+                    <datalist id="countries" class="f"></datalist>
                     <button class="btn btn-primary" type="submit"><i class="bi bi-geo-fill"></i> Guess</button>
-                    <div class="htmx-indicator spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
                 </div>
             </form>
-            <div id="banana" class="z-1"></div>
             <div id="submission">
                 <h3 class="my-3">You have submitted:</h3>
                 <ul class="list-group">
