--- a/src/main/resources/templates/AdminWebSocket/adminPartial.html
+++ b/src/main/resources/templates/AdminWebSocket/adminPartial.html
@@ -62,7 +62,7 @@
         <thead>
         <tr>
             <th></th>
-        {#for i in NUMBER_OF_TURNS_PER_GAME}
+        {#for i in application.numberOfTurnsPerGame}
             <th class="text-start">Turn {i}</th>
         {/for}
             <th></th>
