--- a/src/main/resources/templates/FunWithFlagsWebSocket/gameover.html
+++ b/src/main/resources/templates/FunWithFlagsWebSocket/gameover.html
@@ -3,8 +3,10 @@
         <h1 class="display-1">Game Over!</h1>
        <ol class="list-group mb-3">
             {#for score in game.scores}
-            <li class="list-group-item d-flex justify-content-between"><span class="display-{score_count}">{score_count}
-                    {score.player.name}</span><span class="display-{score_count}">{score.score}</span></li>
+            <li class="list-group-item d-flex justify-content-between">
+                <span class="display-{score_count}">{score_count} {score.player.name}</span>
+                <span class="display-{score_count}">{score.score}</span>
+            </li>
             {/for}
         </ol>
         <a class="btn btn-primary btn-lg w-100 mb-3" href="/">Play again</a>
